# query-flux

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  Makefile  PERFORMANCE_FINDINGS.md  README.md  benchmark.md  config.example.yaml  config.local.yaml  contribute.md  development.md  index.html  requirements.txt  robots.txt  search-index-default.json  search-index-docs-default-0.1.0.json  search-index-docs-default-current.json  sitemap.xml
.cargo/: config.toml
.claude/: settings.json
.cursor/plans/: snowflake_backend_adapter_060e666e.plan.md  snowflake_frontend_all_forms_a551915a.plan.md
.github/: pr-title-checker-config.json
.github/workflows/: benchmark.yml  ci.yml  deploy-website.yml  docker-publish-tag.yml  docker-release-prod.yml  docker-release-rc.yml  docker-verify.yml  docs-build.yml  pr-title-checker.yml  release.yml
assets/css/: styles.30c09c74.css  (+2 more)
crates/queryflux-auth/: Cargo.toml
crates/queryflux-auth/src/: admin_credentials.rs  authorization.rs  credentials.rs  ldap.rs  lib.rs  provider.rs  resolver.rs
crates/queryflux-bench/: Cargo.toml
crates/queryflux-bench/src/: main.rs
crates/queryflux-cluster-manager/: Cargo.toml
crates/queryflux-cluster-manager/src/: cluster_state.rs  lib.rs  simple.rs  strategy.rs
crates/queryflux-config/: Cargo.toml
crates/queryflux-config/src/: lib.rs  yaml.rs
crates/queryflux-core/: Cargo.toml
crates/queryflux-core/src/: catalog.rs  config.rs  config_json.rs  engine_registry.rs  error.rs  lib.rs  native_result.rs  params.rs  query.rs  session.rs  tags.rs
crates/queryflux-e2e-tests/: Cargo.toml
crates/queryflux-e2e-tests/src/: harness.rs  iceberg_seed.rs  lib.rs  snowflake_client.rs  snowflake_rs_client.rs  trino_client.rs
crates/queryflux-e2e-tests/tests/: duckdb_tests.rs  e2e_tests.rs  iceberg_tests.rs  query_params_tests.rs  routing_tests.rs  session_context_tests.rs  snowflake_connector_rs_tests.rs  snowflake_tests.rs  starrocks_tests.rs  trino_adbc_tests.rs  trino_tests.rs
crates/queryflux-engine-adapters/: Cargo.toml
crates/queryflux-engine-adapters/src/: lib.rs
crates/queryflux-engine-adapters/src/adbc/: mod.rs
crates/queryflux-engine-adapters/src/athena/: mod.rs
crates/queryflux-engine-adapters/src/duckdb/: http.rs  mod.rs
crates/queryflux-engine-adapters/src/mysql_native/: mod.rs
crates/queryflux-engine-adapters/src/snowflake/: mod.rs
crates/queryflux-engine-adapters/src/starrocks/: mod.rs
crates/queryflux-engine-adapters/src/trino/: api.rs  mod.rs
crates/queryflux-fingerprint/: Cargo.toml
crates/queryflux-fingerprint/src/: fallback.rs  fast.rs  lib.rs  rich.rs
crates/queryflux-frontend/: Cargo.toml
crates/queryflux-frontend/src/: admin.rs  dispatch.rs  lib.rs  state.rs
crates/queryflux-frontend/src/flight_sql/: mod.rs
crates/queryflux-frontend/src/mcp/: mod.rs  sink.rs  tools.rs
crates/queryflux-frontend/src/mysql_wire/: mod.rs
crates/queryflux-frontend/src/postgres_wire/: mod.rs
crates/queryflux-frontend/src/snowflake/: mod.rs  proxy.rs  tests.rs
crates/queryflux-frontend/src/snowflake/http/: format.rs  mod.rs  session_store.rs
crates/queryflux-frontend/src/snowflake/http/handlers/: bindings.rs  common.rs  mod.rs  query.rs  session.rs  token.rs
crates/queryflux-frontend/src/snowflake/sql_api/: auth.rs  handlers.rs  mod.rs
crates/queryflux-frontend/src/trino_http/: handlers.rs  mod.rs  result_sink.rs  serialize.rs  state.rs
crates/queryflux-metrics/: Cargo.toml
crates/queryflux-metrics/src/: buffered_store.rs  lib.rs  prometheus_store.rs
crates/queryflux-persistence/: Cargo.toml
crates/queryflux-persistence/src/: cluster_config.rs  in_memory.rs  lib.rs  metrics_store.rs  query_history.rs  routing_json.rs  routing_slices.rs  script_library.rs
crates/queryflux-persistence/src/postgres/: mod.rs
crates/queryflux-persistence/src/postgres/migrations/: 20260319000001_executing_queries.sql  20260319000002_queued_queries.sql  20260319000003_query_records.sql  20260319000004_cluster_snapshots.sql  20260319000005_add_backend_query_id.sql  20260319000006_query_records_engine_stats.sql  20260321000007_add_engine_elapsed_time.sql  20260321000008_add_translated_sql.sql  20260321000009_cluster_and_group_configs.sql  20260322000010_proxy_settings_and_group_authz.sql  20260323000011_routing_rules.sql  20260324000012_group_ids_and_routing_fks.sql  20260325000013_routing_target_group_column_security_settings.sql  20260326000014_cluster_ids_and_group_member_ids.sql  20260327000015_cluster_max_running_queries.sql  20260328000016_query_records_cluster_fks.sql  20260329000001_initial_schema.sql  20260329000017_cluster_athena_fields.sql  20260330000018_cluster_config_jsonb.sql  20260331000019_user_scripts.sql  20260401000001_query_tags.sql  20260401000020_consolidate_user_scripts.sql  20260402000021_user_scripts_no_group_columns.sql  20260406000001_query_fingerprinting.sql  20260505000001_agent_context.sql  20260505000002_guard_script_kind.sql  20260506000001_guardrails.sql
crates/queryflux-routing/: Cargo.toml
crates/queryflux-routing/src/: chain.rs  lib.rs
crates/queryflux-routing/src/implementations/: client_tags.rs  compound.rs  header.rs  mod.rs  protocol_based.rs  python_script.rs  query_regex.rs  tags.rs
crates/queryflux-routing/tests/: router_tests.rs
docker/: docker-compose.test.yml  docker-compose.yml
docs/: README.md  adding-engine-support.md  architecture.md  auth-authz-design.md  benchmarks.html  configuration.html  contribute.html  development.html  getting-started.html  intro.html  motivation-and-goals.md  project-structure.html  query-translation.md  roadmap.html  routing-and-clusters.md
examples/: README.md
prometheus/: prometheus.yml
queryflux-studio/: .dockerignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
release-please/: release-please-config.json
scripts/: install-adbc-trino-driver.sh  install-libduckdb.sh
snowflake-client/: main.py  test_login_raw.py
test-data/: init.sql
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+436 files in other folders)
