[package]
name = "queryflux-cluster-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
queryflux-core = { workspace = true }
queryflux-engine-adapters = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
