[package]
name = "queryflux-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
