[package]
name = "queryflux-engine-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
queryflux-core = { workspace = true }
queryflux-auth = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
duckdb = { workspace = true }
mysql_async = { workspace = true }
arrow = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
aws-sdk-athena = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-types = { workspace = true }
