[package]
name = "queryflux-fingerprint"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
queryflux-core = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
polyglot-sql = { version = "0.2.3", features = ["all-dialects"] }
regex = "1"
tracing = { workspace = true }
