[package]
name = "queryflux-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
queryflux-core = { workspace = true }
queryflux-engine-adapters = { workspace = true }
queryflux-cluster-manager = { workspace = true }
queryflux-routing = { workspace = true }
queryflux-persistence = { workspace = true }
queryflux-metrics = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
