[package]
name = "queryflux-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
queryflux-core = { workspace = true }
queryflux-engine-adapters = { workspace = true }
queryflux-cluster-manager = { workspace = true }
queryflux-routing = { workspace = true }
queryflux-persistence = { workspace = true }
queryflux-translation = { workspace = true }
queryflux-metrics = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
utoipa = { workspace = true }
dashmap = { workspace = true }
arrow = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
