[package]
name = "queryflux-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
queryflux-core = { workspace = true }
queryflux-persistence = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
prometheus = "0.13"
tracing = { workspace = true }
