[package]
name = "queryflux-routing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
queryflux-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
pyo3 = { workspace = true }
tracing = { workspace = true }
